--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 server.port=8033
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=15672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+
+my.rabbitmq.exchange=default
+my.rabbitmq.queue=myFirstQue
+my.rabbitmq.routingKey=myRoutingKey
